--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: HelpGUI
+name: HelpGUIPlus
 version: 1.0.1
 description: Create your own infinite GUI with information for players or make up your own
 author: Ziomkeee
