--- a/src/main/resources/othergui.yml
+++ b/src/main/resources/othergui.yml
@@ -1,14 +1,14 @@
-# HelpGUI v1.0.0
+# HelpGUI v1.0.3
 #
 # Please report bugs here: https://github.com/Ziomkeee/HelpGUI/issues
 # How to configure a plugin: https://github.com/Ziomkeee/HelpGUI/wiki
 #
 GUI:
-  NameGUI:
-    name: "Name GUI"
+  otherGUI:
+    name: "OtherGUI"
     size: 54
     items:
-      1:
+      5:
         material: "stone"
         amount: 1
         enchant: true
